<resources>
    <string name="app_name">NIKOTA</string>
    <string name="common_loading">Loading&#8230;</string>
    <string name="common_unknown_error">Unknown Error</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_year">Year</string>
    <string name="common_month">Month</string>
    <string name="common_day">Day</string>
    <string name="common_hour">Hour</string>
    <string name="common_minute">Minute</string>
    <string name="common_second">Second</string>
    <string name="common_crash_hint">The app has a little accident and is restarting</string>
    <string name="common_network_error">The current network is not available. Please check the network settings</string>
    <string name="common_video_error_not_support">This video is not suitable for playing on this device</string>
    <string name="common_video_error_unknown">The video Cannot play</string>
    <string name="common_video_error_supplement">Type of Error：%d，Code of Error：%d</string>
    <string name="common_phone_input_hint">Please enter email</string>
    <string name="common_phone_input_error">Your mailbox is incorrect</string>
    <string name="common_password_input_error">Please enter a password</string>
    <string name="common_password_input_unlike">The two passwords are inconsistent. Please re-enter</string>
    <string name="common_code_input_hint">Enter the PIN</string>
    <string name="common_code_send">Send PIN</string>
    <string name="common_code_send_hint">The verification code has been sent to you. Please check</string>
    <string name="common_code_error_hint">Verification code error, please check the enter</string>
    <string name="common_code_send_tiptitle">[NIKOTA APP]Check your NIKOTA APP ID email</string>
    <string name="common_code_send_tipa">&lt;p&gt;[NIKOTA APP]You have selected this email address as your new  NIKOTA APP ID 。To verify that this email address belongs to you，Please enter the verification code below on the email verification page：&lt;/p&gt;</string>
    <string name="common_code_send_tipfore">&lt;p&gt;[NIKOTA APP]To verify that this email address belongs to you，Please enter the verification code below on the email verification page：：&lt;/p&gt;</string>
    <string name="common_code_send_tipb">&lt;p&gt;The verification code will expire within one hour after this email is sent 。&lt;/p&gt;&lt;p&gt;Why you received this email：&lt;/p&gt;&lt;p&gt;Nikota app will verify your email address when you use nikota app。You cannot use the email address until you verify it 。&lt;/p&gt;&lt;p&gt;If you do not make this request, you can ignore this email 。NIKOTA APP ID  Can only be created after verification 。&lt;/p&gt;</string>
    <string name="common_step_next">Next</string>
    <string name="common_step_complete">Finish</string>
    <string name="common_step_commit">Submit</string>
    <string name="common_permission_alert">Authorization reminder</string>
    <string name="common_permission_fail_1">Authorization failed. Please grant permissions correctly</string>
    <string name="common_permission_fail_2">Failed to obtain permissions. Please grant permissions manually</string>
    <string name="common_permission_fail_3">Failed to obtain permission, please grant it manually%s</string>
    <string name="common_permission_fail_4">Background location permission is not granted，please select "always allow;"</string>
    <string name="common_permission_goto">Go to Authorization</string>
    <string name="common_permission_calendar">Calendar permissions</string>
    <string name="common_permission_camera">Camera permissions</string>
    <string name="common_permission_contacts"> Contacts permissions</string>
    <string name="common_permission_location"> Location permissions</string>
    <string name="common_permission_location_background">Location Always permissions</string>
    <string name="common_permission_microphone">Microphone permissions</string>
    <string name="common_permission_phone">Phone permissions</string>
    <string name="common_permission_call_log">CALL_LOG permissions</string>
    <string name="common_permission_sensors">BODY_SENSORS permissions</string>
    <string name="common_permission_activity_recognition">Fitness permissions</string>
    <string name="common_permission_sms">SMS permissions</string>
    <string name="common_permission_storage">Storage permissions</string>
    <string name="common_permission_install">Install app permissions</string>
    <string name="common_permission_notification">Notification bar permissions</string>
    <string name="common_permission_window">Suspended window permissions</string>
    <string name="common_permission_setting">System setting permissions</string>
    <string name="common_network_hint">There is currently no network connection. Please check the network settings</string>
    <string name="common_no_more_data">No more data</string>
    <string name="common_web_ssl_error_title">The current website security certificate has expired or is not trusted\nDo you want to continue to access</string>
    <string name="common_web_ssl_error_allow">continue</string>
    <string name="common_web_ssl_error_reject">Back</string>
    <string name="common_web_location_permission_title">The current website needs to get your geographic location</string>
    <string name="common_web_location_permission_allow">Grant</string>
    <string name="common_web_location_permission_reject">Refuse</string>
    <string name="common_web_call_phone_title">Phone Number %s</string>
    <string name="common_web_call_phone_allow">Call</string>
    <string name="common_web_call_phone_reject">Cancel</string>
    <string name="http_loading">Net Loading&#8230;</string>
    <string name="http_unknown_error">Request error, unknown error</string>
    <string name="http_token_error">Login failed, please login again</string>
    <string name="http_data_explain_error">Data parsing exception, please wait</string>
    <string name="http_server_out_time">The server request timed out. Please try again later</string>
    <string name="http_network_error">The request failed. Please check the network settings</string>
    <string name="http_response_error">The server responded abnormally. Please try again later</string>
    <string name="http_server_error">The server connection is abnormal. Please try again later</string>
    <string name="http_request_cancel">The request was interrupted, please try again</string>
    <string name="status_layout_no_data">Absolutely empty</string>
    <string name="status_layout_error_request">Request error, please try again</string>
    <string name="status_layout_error_network">Network error, please try again</string>
    <string name="status_layout_retry">Retry</string>
    <string name="address_title">Please select a region</string>
    <string name="address_hint">Please select</string>
    <string name="date_title">Please select a date</string>
    <string name="time_title">Please select a time</string>
    <string name="update_title">New </string>
    <string name="update_content">Renew the content</string>
    <string name="update_no">Another time</string>
    <string name="update_yes">Update now</string>
    <string name="update_permission_hint">Permission must be granted before the update can be downloaded normally</string>
    <string name="update_status_start">Downloading</string>
    <string name="update_status_running">Download %d%%</string>
    <string name="update_status_successful">Download completed, click Install </string>
    <string name="update_status_failed">Download failed. Click Retry</string>
    <string name="update_no_update">It is already been the latest version</string>
    <string name="update_notification_channel_id">update</string>
    <string name="update_notification_channel_name">Upgrade notification</string>
    <string name="share_title">Share &#8230;</string>
    <string name="share_platform_wechat">Wechat</string>
    <string name="share_platform_moment">Moments</string>
    <string name="share_platform_qq">QQ</string>
    <string name="share_platform_qzone">Qzone</string>
    <string name="share_platform_link">Copylink</string>
    <string name="share_platform_copy_hint">Copied to clipboard</string>
    <string name="pay_title">Please enter the payment password</string>
    <string name="select_min_hint">At least select  %d item</string>
    <string name="select_max_hint">Can only select up to %d item</string>
    <string name="safe_title">Identity verification</string>
    <string name="home_exit_hint">Press again to exit</string>
    <string name="home_nav_index">Home</string>
    <string name="home_nav_found">Share</string>
    <string name="home_nav_message">Service</string>
    <string name="home_nav_me">My</string>
    <string name="login_register">Register</string>
    <string name="login_forget">Forget Password？</string>
    <string name="login_text">Login</string>
    <string name="login_other">Login in different ways</string>
    <string name="register_title">Register</string>
    <string name="register_hint">Mobile phone number is only used to log in and protect account security </string>
    <string name="register_password_hint1">Password Length over 6 </string>
    <string name="register_password_hint2">Enter the password again</string>
    <string name="setting_title">Settings</string>
    <string name="setting_language_simple">Chinese</string>
    <string name="setting_language_en">English</string>
    <string name="setting_password">Change password</string>
    <string name="setting_phone">Modify mobile phone</string>
    <string name="setting_auto">Auto-login</string>
    <string name="setting_cache">Clear cache</string>
    <string name="setting_agreement">Privacy Policy</string>
    <string name="setting_about">About us</string>
    <string name="setting_exit">Logout</string>
    <string name="about_title">About us</string>
    <string name="user_contracts">Read and agree</string>
    <string name="userAndPrivacyAgreementPrefix">Use App to express consent</string>
    <string name="userAndPrivacyAgreementSuffix">please go to click to view the agreement details。</string>
    <string name="userAgreement"><u><font color="#85b84f" > User Agreement</font></u>、</string>
    <string name="userAgreementtwo"><u><font color="#85b84f" > User &amp;</font></u></string>
    <string name="privacyAgreement"><u><font color="#85b84f">Privacy Agreement</font></u></string>
    <string name="oldpassword_hip">the old password</string>
    <string name="newpassword_hip">new password</string>
    <string name="surepassword_hint">new password again</string>
    <string name="add_group">Add new member</string>
    <string name="scan_add_group_user">Scan QR code to add members</string>
    <string name="scan_add_group_user_tip">Scan his QR code</string>
    <string name="scan_suc_user">Users scanned</string>
    <string name="add_group_unselect">Unselected</string>
    <string name="dev_macaddress">MAC Addr</string>
    <string name="dev_batterycells">Cell Type</string>
    <string name="dev_voltagelevel">Voltage level</string>
    <string name="dev_dcversion">DC Version</string>
    <string name="dev_llcversion">LLC Version</string>
    <string name="dev_pfcversion">PFC Version</string>
    <string name="dev_inbound">Warehousing</string>
    <string name="set_dev_type">Device model</string>
    <string name="set_profile_id">Device version</string>
    <string name="dev_onecorecode">Equipment 1 core coding</string>
    <string name="dev_twocorecode">Equipment 2 core coding</string>
    <string name="dev_dcsubversion">DC SubVersion</string>
    <string name="dev_llcsubversion">LLC SubVersion</string>
    <string name="dev_pfcsubversion">PFC SubVersion</string>
    <string name="dev_frequency">Frequency</string>
    <string name="dev_bmsversion">BMS Version</string>
</resources>