<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ll_ui_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/table_cell_color"
        android:paddingTop="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_10"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/table_cell_font_dark"
            android:text="@string/userAndPrivacyAgreementPrefix"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_userAgreement"
            android:textColor="@color/table_cell_font_dark"
            android:text="@string/userAgreement"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/table_cell_font_dark"
            android:id="@+id/tv_privacyAgreement"
            android:text="@string/privacyAgreement"
            />

    </LinearLayout>
        <TextView
            android:layout_marginTop="@dimen/dp_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/table_cell_font_dark"
            android:text="@string/userAndPrivacyAgreementSuffix"
            />

</LinearLayout>

