<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_primary_dark_color"
    android:gravity="center_horizontal"
    android:layoutAnimation="@anim/layout_from_bottom"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity"
    tools:layoutAnimation="@null">

    <com.hjq.bar.TitleBar
        android:id="@+id/tb_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:barStyle="transparent"
        app:leftIcon="@null"
        app:rightBackground="@null"
        app:rightTitle="@string/login_register"
        app:rightTitleColor="@color/common_accent_color"
        app:rightTitleSize="@dimen/sp_14"
        app:title="" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="552dp"
        android:layout_height="@dimen/dp_90"
        android:layout_marginVertical="@dimen/dp_10"
        app:srcCompat="@drawable/img" />

    <LinearLayout
        android:id="@+id/ll_login_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.hjq.widget.view.ClearEditText
            android:id="@+id/et_login_phone"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/table_cell_color"
            android:hint="@string/common_phone_input_hint"
            android:inputType="textVisiblePassword"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@color/table_cell_font_dark"
            app:regexType="nonnull" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginHorizontal="@dimen/dp_40" />

        <com.hjq.widget.view.PasswordEditText
            android:id="@+id/et_login_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@color/table_cell_color"
            android:hint="@string/common_password_input_error"
            android:imeOptions="actionDone"
            android:maxLength="20"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@color/table_cell_font_dark" />

        <View
            style="@style/HorizontalLineStyle"
            android:layout_marginHorizontal="@dimen/dp_40" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_60"
            android:text="@string/login_forget"
            android:textColor="@color/common_accent_color" />

        <com.hjq.widget.view.SubmitButton
            android:id="@+id/btn_login_commit"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/login_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_contracts"
            android:textColor="@color/common_primary_color" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="1" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:id="@+id/cb_user_contract"
            android:checked="false"
            app:buttonCompat="@drawable/checkbox_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_userAgreementtwo"
            android:layout_gravity="center"
            android:textColor="@color/ic_input_font_color"
            android:text="@string/userAgreementtwo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/tv_privacyAgreementtwo"
            android:textColor="@color/ic_input_font_color"
            android:text="@string/privacyAgreement"
            />

    </LinearLayout>

</LinearLayout>