<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

    <com.hjq.widget.view.RegexEditText
        android:id="@+id/et_input_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/dialog_input_bg"
        android:paddingHorizontal="@dimen/dp_10"
        android:paddingVertical="@dimen/dp_5"
        android:singleLine="true"
        android:textColor="#333333"
        android:textSize="@dimen/sp_14"
        android:hint="@string/oldpassword_hip"
        tools:context=".ui.dialog.PhoneDialog"
        />
    <com.hjq.widget.view.RegexEditText
        android:id="@+id/et_input_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/dialog_input_bg"
        android:paddingHorizontal="@dimen/dp_10"
        android:paddingVertical="@dimen/dp_5"
        android:singleLine="true"
        android:textColor="#333333"
        android:textSize="@dimen/sp_14"
        android:hint="@string/newpassword_hip"
        tools:context=".ui.dialog.PhoneDialog"
        />
    <com.hjq.widget.view.RegexEditText
        android:id="@+id/et_input_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/dialog_input_bg"
        android:paddingHorizontal="@dimen/dp_10"
        android:paddingVertical="@dimen/dp_5"
        android:singleLine="true"
        android:textColor="#333333"
        android:textSize="@dimen/sp_14"
        android:hint="@string/surepassword_hint"
        tools:context=".ui.dialog.PhoneDialog" />
</LinearLayout>


